<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@color/white"
              android:clickable="true"
              android:orientation="vertical">

    <include
        android:id="@+id/app_header"
        layout="@layout/view_app_header"
        android:layout_width="fill_parent"
        android:layout_height="76.0dip"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8.0dip">

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/app_view_screenshot0"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/app_view_screenshot1"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/app_view_screenshot2"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/app_view_screenshot3"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/app_view_screenshot4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>

                        <ImageView
                            android:id="@+id/app_view_screenshot5"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="4.0dip"
                            android:src="@drawable/screenshot_small"
                            android:visibility="gone"/>
                    </LinearLayout>
                </HorizontalScrollView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip">

                    <TextView
                        android:id="@+id/app_view_meta1"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:lineSpacingMultiplier="1.2"
                        android:singleLine="true"
                        android:text="@string/ui_language"
                        android:textSize="13.0dip"/>

                    <TextView
                        android:id="@+id/app_view_meta2"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:lineSpacingMultiplier="1.2"
                        android:singleLine="true"
                        android:text="@string/app_size"
                        android:textSize="13.0dip"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip">

                    <TextView
                        android:id="@+id/app_view_meta3"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:lineSpacingMultiplier="1.2"
                        android:singleLine="true"
                        android:text="@string/support_rom"
                        android:textSize="13.0dip"/>

                    <TextView
                        android:id="@+id/app_view_meta4"
                        android:layout_width="0.0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:ellipsize="end"
                        android:lineSpacingMultiplier="1.2"
                        android:singleLine="true"
                        android:text="@string/update_time"
                        android:textSize="13.0dip"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/app_view_remark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dip"
                    android:background="@drawable/bg_text_remark"
                    android:lineSpacingMultiplier="1.2"
                    android:text="@string/str_app_remark_hint"
                    android:textSize="14.0dip"/>

                <TextView
                    android:id="@+id/app_view_introduce"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8.0dip"
                    android:lineSpacingMultiplier="1.2"
                    android:text=""
                    android:textColorLink="@color/link_text_color"
                    android:textSize="14.0dip"/>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>